feat: add RemapManifest and ApplyStagingManifest heartbeat handler
Signed-off-by: WenyXu <wenymedia@gmail.com>

--- a/src/datanode/Cargo.toml
+++ b/src/datanode/Cargo.toml
@@ -77,4 +77,5 @@ common-query.workspace = true
 common-test-util.workspace = true
 datafusion-common.workspace = true
 mito2 = { workspace = true, features = ["test"] }
+partition.workspace = true
 session.workspace = true
