refactor: remove `region_numbers` from `TableMeta` and `TableInfo`
Signed-off-by: WenyXu <wenymedia@gmail.com>

--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -79,7 +79,7 @@ tokio.workspace = true
 tonic.workspace = true
 
 [dev-dependencies]
-catalog.workspace = true
+catalog = { workspace = true, features = ["testing"] }
 common-catalog.workspace = true
 pretty_assertions.workspace = true
 prost.workspace = true
