chore: fix sqlness wrong cfg
Signed-off-by: jeremyhi <fengjiachun@gmail.com>

--- a/tests/conf/metasrv-test.toml.template
+++ b/tests/conf/metasrv-test.toml.template
@@ -1,4 +1,5 @@
 flush_stats_factor = 1
+heartbeat_interval = "1s"
 {{ if use_etcd }}
 ## Store server address default to etcd store.
 store_addrs = [{store_addrs | unescaped}]
