chore: batch requests in metric engine
Signed-off-by: jeremyhi <fengjiachun@gmail.com>

--- a/src/datanode/Cargo.toml
+++ b/src/datanode/Cargo.toml
@@ -41,6 +41,7 @@ datafusion.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datatypes.workspace = true
+either.workspace = true
 file-engine.workspace = true
 futures.workspace = true
 futures-util.workspace = true
