--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,8 +6,7 @@ services:
       context: ..
       dockerfile: .devcontainer/Dockerfile
     volumes:
-      - ../..:/workspace:cached
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ..:/workspace:cached
     environment:
       - RUST_BACKTRACE=1
       - CARGO_TERM_COLOR=always
@@ -20,8 +19,5 @@ services:
       - "5001:5001"  # Meta service
       - "5002:5002"  # Meta service HTTP
       - "5236:5236"  # Prometheus remote write
-      - "5432:5432"  # PostgreSQL protocol
-      - "9090:9090"  # Metrics
-      - "9091:9091"  # Jaeger UI
+      - "5432:5432"  # Local PostgreSQL server (for integration testing)
     command: sleep infinity
-    network_mode: host
