chore: use pinned prost 0.14.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -191,8 +191,8 @@ pin-project = "1.0"
 pretty_assertions = "1.4.0"
 prometheus = { version = "0.13.3", features = ["process"] }
 promql-parser = { version = "0.7.1", features = ["ser"] }
-prost = { version = "0.14", features = ["no-recursion-limit"] }
-prost-types = "0.14"
+prost = { version = "=0.14.1", features = ["no-recursion-limit"] }
+prost-types = "=0.14.1"
 raft-engine = { version = "0.4.1", default-features = false }
 rand = "0.9"
 ratelimit = "0.10"
