feat: omplement ALTER TABLE repartition DDL options parsing
Signed-off-by: WenyXu <wenymedia@gmail.com>

--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -76,6 +76,7 @@ tonic.workspace = true
 tracing.workspace = true
 
 [dev-dependencies]
+catalog = { workspace = true, features = ["testing"] }
 common-meta = { workspace = true, features = ["testing"] }
 common-test-util.workspace = true
 path-slash = "0.2"
